fix dark mode font color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,6 +19,10 @@
   --ifm-font-color-base: #4c4c4c;
 }
 
+[data-theme='dark'] {
+  --ifm-font-color-base: #e3e3e3;
+}
+
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
   display: block;
